# CarbonMonoxideSim

./: CMakeLists.txt  LICENSE  README.md
aws/: README.txt  app.py  ble_chat.py  ble_mesh.py  co_lstm_classifier_v1.h5  sensor_simulate.py
datasets/: dataset_2.csv
edgeAI/: LSTM_Classifier.py  LSTM_Classifier_aws.py  LSTM_Model.py  LSTM_Model_aws.py  README.txt  benchmark.py  co_lstm_classifier_v1.mlmodel  co_lstm_classifier_v1.tflite  co_lstm_regression_v1.h5  co_lstm_regression_v1.mlmodel  co_lstm_regression_v1.tflite  metadata_android.py  metadata_ios.py
include/: Block.hpp  Blockchain.hpp  SensorEvent.hpp  SensorSimulator.hpp  SmartContract.hpp  Storage.hpp
ios/: CarbonMonoxideApp.swift
ios/blockchain/: AnyCodable.swift  Block.swift  Blockchain.swift  ConsensusEngine.swift  Peer.swift  SensorEvent.swift  SensorSimulator.swift
ios/bluetooth/: BLECentralManager.swift  BLEPeripheralManager.swift
ios/model/: Classifier.swift  LineGraphView.swift  Regression.swift  SensorDashboardView.swift  SensorViewModel.swift
mobile/: COAppDelegate.swift
mobile/blockchain/: Block.swift  CryptoManager.swift  SensorSimulator.swift  SmartContract.swift
mobile/bluetooth/: BLEViewController.swift  BLEViewControllerWrapper.swift
mobile/model/: FeatureCard.swift
src/: Block.cpp  Blockchain.cpp  SensorSimulator.cpp  Storage.cpp  dataset_loader.cpp  main.cpp
